<resources>
    <string name="app_name">Elevate</string>
    <string name="title_home">Home</string>
    <string name="title_progress">Progress</string>
    <string name="title_profile">Profile</string>
    <string name="placeholder_caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</string>
    <string name="title_ideator">IDEATOR</string>
    <string name="title_funder">FUNDER</string>
    <string name="title_crowdfunding">CROWDFUNDING</string>
    <string name="welcome">Welcome to Evelate!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modal">Modal</string>
    <string name="quantity">Rp.50.000.000</string>
    <string name="location">Location</string>
    <string name="brand_name">Brand Name</string>
    <string name="status">Status Ide</string>
    <string name="brand_type">Brand Type</string>
    <string name="username">Username</string>
    <string name="role">Role</string>
    <string name="Ideator">Ideator</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="banner">Banner</string>
    <string name="balance">Balance</string>
    <string name="rp_660_000">Rp. 660.000</string>
    <string name="current_balance">Current Balance</string>
    <string name="top_up">Top Up</string>
    <string name="withdraw">Withdraw</string>
    <string name="bank_id">27456123151815 a/n</string>
    <string name="bank_name">PT. Elevate Makmur Jaya</string>
    <string name="note">NOTE</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Convallis dignissim quis at vitae viverra ut. Platea turpis laoreet ut dictum. Nullam sit nulla enim a adipiscing turpis odio. Eget turpis dictum sed gravida magna ac fermentum libero quam.</string>
    <string name="proof_of_payment">Proof of Payment</string>
    <string name="confirm">Confirm</string>
    <string name="bank_account">Bank Account</string>
    <string name="total_amount">Total Amount</string>
    <string name="progress_update">Progress Update</string>
    <string name="donate">Donate</string>
    <string name="xx_days_left">xx days left</string>
    <string name="unfulfilled">UNFULFILLED</string>
    <string name="half_quantity">Rp.25.000.000</string>
    <string name="detailCurrentProgress">50%</string>
    <string name="collected">Collected</string>
    <string name="description">Description</string>
    <string name="term_2">Term 2</string>
    <string name="locked_command">This phase is still locked. To unlock, the ideator must completed the previous phase.</string>
    <string name="term_3">Term 3</string>
    <string name="term_1">Term 1</string>
    <string name="document">Document</string>
    <string name="term1_description">The ideator must provide the budget plan for the initial stages. When the budget plan approved, 25% of the total donations will be given to start the project.</string>
    <string name="document_in_review">Document in Review</string>
    <string name="term1_progress">To completed this phase, Please provide a budget plan document for the initial stages of your funding in pdf form.</string>
    <string name="proposal_file">Proposal File</string>
    <string name="pdf_name">Pdf Name</string>
    <string name="process_term1">On Process Term 1</string>
    <string name="process_term2">On Process Term 2</string>
    <string name="completed">Completed</string>
    <string name="login_quote">An application to start and fund business. Start funding business today or start your own business today</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_save">Save</string>
</resources>