<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint_ideator_progress"
    android:visibility="visible"
    android:padding="16dp"
    android:background="@color/grey">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDetail"
        android:background="@drawable/roundimagewhite"
        android:layout_width="379dp"
        android:layout_height="375dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/detailProgressBar"
            android:layout_width="315dp"
            android:layout_height="11dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="210dp"
            android:progress="50"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/roundimagewhite"
            android:progressTint="@color/OnSecondary"/>


        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="169dp"
            android:layout_height="135dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_sample_photo"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/detailFileProposal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mdi_file_download"
            android:layout_marginTop="120dp"
            android:layout_marginStart="213dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_access_time_24"
            android:layout_marginTop="93dp"
            android:layout_marginStart="212dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/detailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="213dp"
            android:text="@string/brand_name"
            android:textColor="@color/OnSecondary"
            android:textSize="24sp"
            android:fontFamily="@font/kanit_bold"/>

        <TextView
            android:id="@+id/detailBrandType"
            android:alpha=".2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:layout_marginStart="213dp"
            android:text="@string/brand_type"
            android:textColor="@color/greytext"
            android:textSize="14sp"
            android:fontFamily="@font/kanit_bold"/>

        <TextView
            android:id="@+id/detailLocation"
            android:alpha=".2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:layout_marginStart="213dp"
            android:text="@string/location"
            android:textColor="@color/greytext"
            android:textSize="10sp"
            android:fontFamily="@font/kanit_bold"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/detailDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="93dp"
            android:textSize="10sp"
            android:text="@string/xx_days_left"
            android:textColor="@color/greytext"
            android:alpha=".2"
            android:fontFamily="@font/kanit_bold"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/detailStatusFund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/unfulfilled"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:padding="2dp"
            android:fontFamily="@font/kanit"
            android:layout_marginStart="32dp"
            android:layout_marginTop="160dp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proposal_file"
            android:textSize="10sp"
            android:layout_marginTop="122dp"
            android:layout_marginStart="240dp"
            android:textColor="@color/greytext"
            android:fontFamily="@font/kanit_bold"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/detailCurrentFund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanit"
            android:textSize="10sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="185dp"
            android:textColor="@color/OnSecondary"
            android:text="@string/half_quantity"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/detailTotalFund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanit"
            android:textSize="10sp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="185dp"
            android:textColor="@color/OnSecondary"
            android:text="@string/quantity"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/detailCurrentProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/OnSecondary"
            android:alpha=".4"
            android:fontFamily="@font/kanit"
            android:textSize="10sp"
            android:layout_marginTop="225dp"
            android:layout_marginStart="32dp"
            android:text="@string/detailCurrentProgress"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="20dp"
            android:text="@string/collected"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanit"
            android:textSize="14sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="245dp"
            android:textColor="@color/OnSecondary"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="270dp"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/OnSecondary"
            android:alpha=".6"
            android:fontFamily="@font/kanit"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/kanit_bold"
        android:text="@string/progress_update"
        android:textColor="@color/OnSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardTerm1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDetail" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTerm1"
        android:layout_width="347dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cardTerm2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <ImageButton
            android:id="@+id/ideator_add_proposal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_bi_plus_square_dotted"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="28dp"
            android:textSize="10sp"
            android:fontFamily="@font/kanit"
            android:textColor="@color/OnSecondary"
            android:text="@string/term_1"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".4"
            android:fontFamily="@font/kanit"
            android:textSize="8sp"
            android:layout_marginStart="82dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="23dp"
            android:textColor="@color/OnSecondary"
            android:text="@string/term1_progress"
            tools:ignore="SmallSp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTerm2"
        android:layout_width="347dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cardTerm3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTerm1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="28dp"
            android:textSize="10sp"
            android:fontFamily="@font/kanit"
            android:textColor="@color/OnSecondary"
            android:text="@string/term_2"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/OnSecondary"
            android:alpha=".4"
            android:fontFamily="@font/kanit"
            android:layout_marginTop="23dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="12dp"
            android:text="@string/locked_command"
            tools:ignore="SmallSp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_lock_24"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTerm3"
        android:layout_width="347dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTerm2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="28dp"
            android:textSize="10sp"
            android:fontFamily="@font/kanit"
            android:textColor="@color/OnSecondary"
            android:text="@string/term_3"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/OnSecondary"
            android:alpha=".4"
            android:fontFamily="@font/kanit"
            android:layout_marginTop="23dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="12dp"
            android:text="@string/locked_command"
            tools:ignore="SmallSp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_lock_24"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>